Added Base template

--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
     <head>
         <title>Landing Page</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="./style.css"/>
+        <link rel="stylesheet" href="./styles.css"/>
     </head>
     <body>
+        <div class="header">
+            <div class="logo"><img src="images/Waveless-Color.svg" alt="logo"/></div>
+            <div class="links">
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+        </div>
+        <div class="main">
+            <div class="description">
+                <h2></h2>
+                <p></p>
+                <button>Sign up</button>
+            </div>
+            <img src="" alt="descriptor image"/>
+        </div>
+        <div class="info">
+            <h3></h3>
+            <div class="info-container">
+                <img src="" alt="info">
+                <p>Placeholder</p>
+                <img src="" alt="info">
+                <p>Placeholder</p>
+                <img src="" alt="info">
+                <p>Placeholder</p>
+                <img src="" alt="info">
+                <p>Placeholder</p>
+            </div>
+        </div>
+        <div class="quote-block">
+            <p class="quote">Quote</p>
+            <p class="quoter">Quoter</p>
+        </div>
+        <div class="footer">
+            <div class="call">
+                <div class="message-bold"><p>Sign up Now!</p></div>
+                <div class="message"><p>Sign up and get the latest news and offers for our product</p></div>
+                <button>Sign up</button>
+            </div>
+        </div>
+
+
        
     </body>
 
