--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo"><img src="images/Waveless-Color.svg" alt="logo"/></div>
+            <div class="logo"><img src="images/file.svg" alt="logo" width=50%/></div>
             <div class="links">
                 <ul>
                     <li>header link one</li>
@@ -18,8 +18,8 @@
         </div>
         <div class="main">
             <div class="description">
-                <h2></h2>
-                <p></p>
+                <p class="main-bold">aaaaaa</p>
+                <p>aaaaaa</p>
                 <button>Sign up</button>
             </div>
             <img src="" alt="descriptor image"/>
@@ -38,13 +38,15 @@
             </div>
         </div>
         <div class="quote-block">
-            <p class="quote">Quote</p>
-            <p class="quoter">Quoter</p>
+            <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="quoter">-Lorem ipsum</p>
         </div>
         <div class="footer">
             <div class="call">
+                <div class="message-block"> 
                 <div class="message-bold"><p>Sign up Now!</p></div>
                 <div class="message"><p>Sign up and get the latest news and offers for our product</p></div>
+            </div>
                 <button>Sign up</button>
             </div>
         </div>
