--- a/index.html
+++ b/index.html
@@ -18,23 +18,31 @@
         </div>
         <div class="main">
             <div class="description">
-                <p class="main-bold">aaaaaa</p>
-                <p>aaaaaa</p>
+                <p class="main-bold">Lorem ipsum dolor sit amet</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <button>Sign up</button>
             </div>
             <img src="" alt="descriptor image"/>
         </div>
         <div class="info">
-            <h3></h3>
+            <div class="info-header"><p>Some Information here</p></div>
             <div class="info-container">
+            <div class="block">
                 <img src="" alt="info">
-                <p>Placeholder</p>
+                <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="block">
                 <img src="" alt="info">
-                <p>Placeholder</p>
+                <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="block">
                 <img src="" alt="info">
-                <p>Placeholder</p>
+                <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="block">
                 <img src="" alt="info">
-                <p>Placeholder</p>
+                <p>Lorem ipsum dolor sit amet</p>
+            </div>
             </div>
         </div>
         <div class="quote-block">
