Add Page Content

--- a/index.html
+++ b/index.html
@@ -2,31 +2,54 @@
 <html lang="en">
     <head>
         <title>Landing Page</title>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="./styles.css"/>
     </head>
     <body>
         <div class="header">
-            <div class="logo"><img src="images/file.svg" alt="logo" width=50%/></div>
+            <img src="images/file.svg" alt="logo"/>
             <div class="links">
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li>Support</li>
+                    <li>Catalog</li>
+                    <li>Account</li>
                 </ul>
             </div>
         </div>
-        <div class="main">
-            <div class="description">
-                <p class="main-bold">Lorem ipsum dolor sit amet</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="hero">
+            <div class="hero-text">
+                <h2>Waves Are Perilous</h2>
+                <p>Ever had a vacation ruined, childhood traumas, wanna build your sand castles without any annoyances.
+                    <br>Join us in getting rid of all waves across the world.
+                </p>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="descriptor image"/>
+            <img src="images/hero-waves.jpg" alt="descriptor image"/>
         </div>
-        <div class="info">
-            <div class="info-header"><p>Some Information here</p></div>
-            <div class="info-container">
+        <div class="why">
+            <h2>Why We Do This</h2>
+            <div class="why-container">
+            <div class="block">
+                <img src="images/castle.jpeg" alt="info">
+                <p>Childhood beach trips ruined due to untimely waves.</p>
+            </div>
+            <div class="block">
+                <img src="images/drowning.jpeg" alt="info">
+                <p>Leave your child unattended without worrying about these pesky waves.</p>
+            </div>
+            <div class="block">
+                <img src="images/tsunami.jpg" alt="info">
+                <p>200,000 deaths per year due to Tsunamis.</p>
+            </div>
+            <div class="block">
+                <img src="images/sealevels.jpeg" alt="info">
+                <p>Rising sealevels prevent us from polluting our planet.</p>
+            </div>
+            </div>
+        </div>
+        <div class="how">
+            <h2>How We Will Help You</h2>
+            <div class="how-container">
             <div class="block">
                 <img src="" alt="info">
                 <p>Lorem ipsum dolor sit amet</p>
