Made Text and Images Size responsive

--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
         <div class="how">
             <h2>How We Will Help You</h2>
             <div class="how-container">
-            <div class="block">
-                <img src="" alt="info">
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-            <div class="block">
-                <img src="" alt="info">
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-            <div class="block">
-                <img src="" alt="info">
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-            <div class="block">
-                <img src="" alt="info">
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-            </div>
+                <div class="block">
+                    <img src="images/castle.jpeg" alt="info">
+                    <p>Childhood beach trips ruined due to untimely waves.</p>
+                </div>
+                <div class="block">
+                    <img src="images/drowning.jpeg" alt="info">
+                    <p>Leave your child unattended without worrying about these pesky waves.</p>
+                </div>
+                <div class="block">
+                    <img src="images/tsunami.jpg" alt="info">
+                    <p>200,000 deaths per year due to Tsunamis.</p>
+                </div>
+                <div class="block">
+                    <img src="images/sealevels.jpeg" alt="info">
+                    <p>Rising sealevels prevent us from polluting our planet.</p>
+                </div>
+             </div>
         </div>
         <div class="quote-block">
             <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
