--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <img src="images/file.svg" alt="logo"/>
             <div class="links">
                 <ul>
-                    <li>Support</li>
-                    <li>Catalog</li>
-                    <li>Account</li>
+                    <li><a>Support</a></li>
+                    <li><a>Catalog</a></li>
+                    <li><a>Account</a></li>
                 </ul>
             </div>
         </div>
